--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --font-titulo: "Rakkas", serif;
 }
 
-/* código omitido *//* código omitido */
+/* código omitido */
 
 /* Reset */
 * {
@@ -37,15 +37,15 @@ p {
 }
 
 img {
-    max-width: 25%;
+    max-width: 90%;
 }
 
 /* código omitido */
 
 /* Responsividade */
-@media (max-width: 150px) {
+@media (max-width: 768px) {
     .conteudo {
-        width: 25%;
+        width: 90%;
     }
 
     nav ul {
