--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 header.area-verde {
     background-color: var(--primary-color);
-    color: white;
+    color: rgb(163, 59, 59);
     padding: 30px 15px;
     text-align: center;
 }
@@ -68,7 +68,7 @@ main .conteudo {
     padding: 40px 20px;
     max-width: 900px;
     margin: 0 auto;
-    background-color: #632222b2;
+    background-color: #306930b2;
     border-radius: 10px;
     margin-bottom: 40px;
 }
