--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&family=Rakkas&display=swap');
 
 :root {
-    --primary-color: #026773;
+    --primary-color: #3c634e;
     --secondary-color: #3CA6A6;
     --text-color: #024959;
     --background-color: #F2E3D5;
