--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #3c634e;
-    --secondary-color: #3CA6A6;
+    --secondary-color: #1d5733;
     --text-color: #024959;
     --background-color: #F2E3D5;
     --button-hover: #012E40;
