--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    text-align: center;
 }
 
 main .conteudo {
